<resources>
    <string name="app_name">IncomeExpendWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_income">Create Income</string>
    <string name="create_expend">Create Expend</string>
    <string name="title_activity_total__cash">Total_Cash</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="total_cash">Total Cash</string>
    <string name="category">Category</string>
    <string name="home">Home</string>

    <string name="date_of_watch">Date</string>

    <string name="mm_dd_yy">DD/MM/YY</string>
    <string name="Amount">Amount</string>
    <string name="_0000">$0000</string>
    <string name="_0">0</string>
    <string name="description">Description</string>
    <string name="about_get_use">About Get/Use</string>
    <string name="type">Type</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
</resources>
